# platformer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  background.h  block.h  defs.h  level.h  level01.h  levelmanager.h  main.cpp  object.h  platformer.sln  player.h
include/: background.h  block.h  level.h  level01.h  levelmanager.h  object.h  player.h
src/: background.cpp  background.h  block.cpp  block.h  level.cpp  level.h  level01.cpp  level01.h  levelmanager.cpp  levelmanager.h  main.cpp  object.h  player.cpp  player.h
